--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ h3{
         background-size: cover;
         background-repeat: no-repeat;
         height: 860px;
-        background-position: center;
+        background-position: bottom;
         padding-top: 0px;
     }
 
@@ -192,7 +192,7 @@ h3{
         background-size:auto;
         background-repeat: no-repeat;
         height: 1100px;
-        background-position: center;
+        background-position: top;
     }
     
 }
